[burak.ozturk][package change]

--- a/app/src/main/res/layout/activity_station_list.xml
+++ b/app/src/main/res/layout/activity_station_list.xml
@@ -7,14 +7,14 @@
 
         <variable
             name="viewModel"
-            type="com.ozturkburak.outerworlds.features.stationlist.StationListViewModel" />
+            type="com.ozturkburak.outerworlds.ui.stationlist.StationListViewModel" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".features.stationlist.StationListActivity">
+        tools:context=".ui.stationlist.StationListActivity">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragment"
