--- a/app/src/main/res/layout/activity_ship_creator.xml
+++ b/app/src/main/res/layout/activity_ship_creator.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="com.ozturkburak.outerworlds.features.shipcreator.ShipCreatorViewModel" />
+            type="com.ozturkburak.outerworlds.ui.shipcreator.ShipCreatorViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,7 +17,7 @@
         android:layout_height="match_parent"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        tools:context=".features.shipcreator.ShipCreatorActivity">
+        tools:context=".ui.shipcreator.ShipCreatorActivity">
 
         <TextView
             android:id="@+id/label_points"
